# web_home_work_10

./: pyproject.toml
quotes_to_scrape/quotes_to_scrape/: settings.py
quotes_to_scrape/users/: urls.py  views.py
quotes_to_scrape/users/templates/users/: login.html
